--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Studio April Shower's Website!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!!</a>
             </div>
         </header>
         <!-- Services-->
