--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/SASlogo.PNG" class="d-block w-100" alt="...">
+              <img src="assets/img/SASlogo.PNG" class="d-block w-100" alt="cry">
             </div>
             <div class="carousel-item">
               <img src="..." class="d-block w-100" alt="...">
