--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script>
+        $(document).ready(function(){
+        $("#popup").modal('show');
+        });
+        </script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
