--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <!--will this work --> 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <!--will this work --> 
+        <!--will this work 
         <script>
         $(document).ready(function(){
         $("#popup").modal('show');
         });
-        </script>
+        </script> --> 
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Studio April Shower's Website!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!!!!</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!!!</a>
             </div>
         </header>
         <!-- Services-->
