--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Studio April Shower's Website!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!!!</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!</a>
             </div>
         </header>
         <!-- Services-->
@@ -339,17 +339,17 @@
         </footer>
         <!-- Testing stuff --> 
         <!-- Popup test --> 
-        <div class="portfolio-modal modal fade" id="popup" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
+        <div class="popup-modal modal fade" id="popup" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="popupmodal-dialog">
+                <div class="popupmodal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
+                                <div class="popupmodal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Popup pls work</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">Hopefully works</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
@@ -362,10 +362,7 @@
                                             Illustration
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase"  href="https://www.etsy.com/shop/StudioAprilShowers" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Check it Out! 
-                                    </button>
+                                    <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Check it Out!</a>
                                 </div>
                             </div>
                         </div>
@@ -399,10 +396,7 @@
                                             Illustration
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
+                                    <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!</a>
                                 </div>
                             </div>
                         </div>
