--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Welcome To Studio April Shower's Website!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You!</div>
+                <div class="masthead-heading text-uppercase">It's Nice To Meet You?!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="https://www.etsy.com/shop/StudioAprilShowers">Shop Now!</a>
             </div>
         </header>
