--- a/index.html
+++ b/index.html
@@ -339,16 +339,16 @@
         </footer>
         <!-- Testing stuff --> 
         <!-- Popup test --> 
-        <div class="popup-modal modal fade" id="popup" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="popupmodal-dialog">
-                <div class="popupmodal-content">
+        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="popupmodal-body">
+                                <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Popup pls work</h2>
+                                    <h2 class="text-uppercase">Popup pls work and be smaller</h2>
                                     <p class="item-intro text-muted">Hopefully works</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
