--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </footer>
         <!-- Testing stuff --> 
         <!-- Popup test --> 
-        <div class="portfolio-modal modal fade" id="popup" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="popup-modal modal fade" id="popup" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
