--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading text-uppercase">Hi! It's nice to meet you!</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="col-lg-4"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
             </div>
