--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
                     <h2 class="section-heading text-uppercase">Hi! It's nice to meet you!</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4">
+            </div>
+
+            <div class="container py-4 py-xl-5" data-aos="fade" data-aos-duration="800">
+                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    <div class="col">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Grace Xu</h4>
@@ -99,8 +102,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                <div class="col">
+                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
         </section>
