--- a/blogandreviews/index.html
+++ b/blogandreviews/index.html
@@ -30,10 +30,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="studioaprilshowerweb/index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="blogandreviews">Blog/Reviews</a></li>
-                        <li class="nav-item"><a class="nav-link" href="studioaprilshowers#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="studioaprilshowers">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/studioaprilshowers">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
