--- a/blogandreviews/index.html
+++ b/blogandreviews/index.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="blogandreviews">Blog/Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="../index.html#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="/studioaprilshowers">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="studioaprilshowers">Aboutt</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 
