--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Hi! It's nice to meet you!</h2>
+                    <h2 class="section-heading text-uppercase">Meet the Maker!</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
 
-            <div class="container py-4 py-xl-5" data-aos="fade" data-aos-duration="800">
-                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
-                    <div class="col">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
-                            <h4>Grace Xu</h4>
-                            <p class="text-muted">Owner + Artist</p>
-                        </div>
+            <div class="container ">
+        
+                <div class="col-md-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
+                        <h4>Grace Xu</h4>
+                        <p class="text-muted">Owner + Artist</p>
                     </div>
                 </div>
-                <div class="col">
+                
+                <div class="col-md-4">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/flowerbeads.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/flowerbeads.jpeg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Explore</div>
@@ -408,7 +408,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/flowerbeads.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/flowerbeads.jpeg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
