--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Meet the Maker!</h2>
+                    <h2 class="section-heading text-uppercase">Meet the Maker!!!</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
