--- a/index.html
+++ b/index.html
@@ -93,15 +93,17 @@
             </div>
 
             <div class="container text-center">
-                <div class="row align-items-start">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
-                        <h4>Grace Xu</h4>
-                        <p class="text-muted">Owner + Artist</p>
+                <div class="row flex-column">
+                    <div calss ="col"> 
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/photo.JPG" alt="..." />
+                            <h4>Grace Xu</h4>
+                            <p class="text-muted">Owner + Artist</p>
+                        </div>
                     </div>
-                <div class="col">
-                    <p class="large text-muted"> Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
+                    <div class="col">
+                        <p class="large text-muted"> Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
             </div>
         </section>
         <!-- Portfolio Grid-->
@@ -207,7 +209,7 @@
         </section>
         <!-- Photo Carousel --> 
        
-        <div id="carouselExampleFade" class="carousel slide border-3">
+        <div id="carouselExampleFade" class="carousel slide border border-3"  data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="assets/img/carousel/breakfastrect.jpg" class="d-block w-100" alt="cry">
