--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             </div>
         </section>
         <!-- Photo Carousel --> 
-       
-        <div id="carouselExampleFade" class="carousel slide border border-50"  data-bs-ride="carousel">
+        <section class="page-section bg-light" id="carousel">
+        <div id="carouselExampleFade" class="carousel slide"  data-bs-ride="carousel" style="width: 600px; height: 400px;">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="assets/img/carousel/breakfastrect.jpg" class="d-block w-100" alt="cry">
@@ -236,6 +236,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        </section>
      
         <!-- About-->
         <section class="page-section" id="about">
