--- a/blogandreviews/index.html
+++ b/blogandreviews/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="../assets/img/SAS logo.png" alt="..." /></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="flase" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
@@ -45,7 +45,7 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
+                    <h2 class="section-heading text-uppercase">Work in Progress</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row text-center">
@@ -76,7 +76,49 @@
                 </div>
             </div>
         </section>
-        
+        <section class="page-section" id="blog">
+
+            <div class="container">
+                <div class="row">
+                    <div class ="col-md-2">
+                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." style="width:80%" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="large text-muted">Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class ="col-md-2">
+                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." style="width:80%" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="large text-muted">Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class ="col-md-2">
+                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." style="width:80%" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="large text-muted">Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class ="col-md-2">
+                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." style="width:80%" />
+                    </div>
+                    <div class="col-md-10">
+                        <p class="large text-muted">Side. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
