--- a/blogandreviews/index.html
+++ b/blogandreviews/index.html
@@ -51,60 +51,63 @@
                 <div class="row text-left">
                     <div class="col-md-3">
                         <div class = "box">
-                            <img class="img-fluid" src="../assets/img/portfolio/swimmingpools.JPG" alt=".."  >
+                            <img class="img-fluid" src="/assets/img/review/B00FEF9B-38C8-4682-BB2B-BCE0157FD53E.JPG" alt=".."  >
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p class="text-muted">The cutest, most fun hoops I have in my earring collection :’) I love them so much. Very comfortable to wear and are light. Super fast shipping! Quality is excellent! Get em get em get em!</p>
+                            <p class="text-muted">"These beach earrings are so cute and arrived safely! As a fellow claymaker, I can tell that these are well made with creative talent! Very happy with these and even though they are summer-themed, I plan on wearing them year-round!" -Chloe </p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class = "box">
+                            <img class="img-fluid" src="/assets/img/review/IMG_7219 (1).jpg" alt=".."  >
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted">"So happy with these tiny cuties! The colors of the rainbow sprinkles are so fun! They're so well made, smooth, and light. The customer service for Studio April Showers is the best, and she truly cares for her customers. Thank you for another awesome pair, couldn't be any happier with these." -Gabby </p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class = "box">
+                            <img class="img-fluid" src="/assets/img/review/3B1D3983-271C-44C3-9CB5-40F3963FD91D (2).JPG" alt=".."  >
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted">"As always, the earrings are amazing! I purchased these and the red mushrooms and just can't get enough of her product! I truly recommend everyone purchases at least one pair of earrings because they are an investment you will love! Thank you for your letters! They're one of the best parts of receiving my orders." -Kourtney</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class = "box">
+                            <img class="img-fluid" src="/assets/img/review/IMG_8670.jpg" alt=".."  >
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted">"I am OBSESSED with these earrings! So cute and lightweight, and Grace was so sweet and responsive with accommodating a request for a different type of posts for my super-sensitive ears. I can't wait to wear these all summer." -Jess</p>
                         </div>
                     </div>
                 
                 </div>
             </div>
         </section>
-
+        <section class ="page-section-small bg-light">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Studio April Showers' Stories</h2>
         </div>
 
-        <section class="page-section" id="blog">
-
+        </section>
+        <section class ="page-section-small">
             <div class="container">
                 <div class="row">
                     <div class ="col-md-2">
-                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." />
+                        <img class="img-fluid" src="/assets/img/other-imgs/firstearrings.JPG" alt="..." />
                     </div>
                     <div class="col-md-10">
                         <a class="h3" href="https://medium.com/@studio.aprilshowers2021/the-start-of-studio-april-showers-8262bfe42b36">The Start of Studio April Showers</a>
@@ -112,13 +115,13 @@
                     </div>
                 </div>
             </div>
-
         </section>
-        <section class="page-section bg-light" id="blog">
+      
+        <section class ="page-section-small">
             <div class="container">
                 <div class="row">
                     <div class ="col-md-2">
-                        <img class="img-fluid" src="/assets/img/portfolio/acrylic.jpg" alt="..." />
+                        <img class="img-fluid" src="/assets/img/carousel/IMG_2506.JPG" alt="..." />
                     </div>
                     <div class="col-md-10">
                         <a class="h3" href="https://medium.com/@studio.aprilshowers2021/life-as-a-high-school-student-and-business-owner-6dec54d557ed">Life as a High School Student and Business Owner</a>
@@ -126,8 +129,8 @@
                     </div>
                 </div>
             </div>
-
         </section>
+
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
