--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <i class="fa-solid fa-hand-holding-heart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Handmade Designs</h4>
-                        <p class="text-muted">All designs are made by me using a mix of mediums, including polymer clay, resin, and glass beads.</p>
+                        <p class="text-muted">All earrings are design and made by me (Grace) using a mix of mediums, including polymer clay, resin, and glass beads.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -133,7 +133,7 @@
                             <i class="fa-solid fa-child-reaching fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Made for You</h4>
-                        <p class="text-muted">My earrings are made with you in mind! All designs are durable, nickel-free, and perfect to match with your unique style. Have a specific design in mind? I make custom earrings too!</p>
+                        <p class="text-muted">My earrings are made with you in mind! All designs are durable, nickel-free, lightweight, and perfect to match with your unique style. Have a specific design in mind? I make custom earrings too!</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -238,7 +238,7 @@
               class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
               <div style="margin: auto">
                 <p class="mb-4" style="margin-bottom: 10px !important">
-                  Our next event, something something, starts in:
+                  My next pop-up @Golden Hour in Albany, CA starts in:
                 </p>
                 <h1 class="text-uppercase fw-bold text-white mb-3" id="counter">
                   5D 10h 20m 50s
@@ -279,9 +279,10 @@
                     console.log(1)
                   </script>
                 </h1>
-                <button class="btn btn-primary fs-5 py-2 px-4" type="button">
+                <!--<button class="btn btn-primary fs-5 py-2 px-4" type="button">
                   Learn more
-                </button>
+                </button>-->
+            
               </div>
             </div>
           </div>
