--- a/ourstory/index.html
+++ b/ourstory/index.html
@@ -44,7 +44,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Meet the Maker!</h2>
+                    <h2 class="section-heading text-uppercase">Meet the Maker + Studio April Shower's Story</h2>
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
@@ -65,12 +65,6 @@
                   </div>
                 </div>
               </div>
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Studio April Shower's Story</h2>
-                    <h3 class="section-subheading text-muted"></h3>
-                </div>
-            </div>
 
             <div class="container">
                 <div class="row">
@@ -78,9 +72,11 @@
                   <div class="col-md-8">
                     <p class="large text-muted">
 
-                        Established in 2020, Studio April Showers was born amidst a global pandemic. It was a wonderful new beginning for me during such a strange time. Much like the saying “April showers bring May flowers,“ this shop was the good that grew from hard times. With Studio April Showers, I aim to take the joy I experience through my work and share it with others.
+                        Established in 2020, Studio April Showers was born amidst a global pandemic. It was a wonderful new beginning for me during such a strange time. Much like the saying “April showers bring May flowers,“ this shop was the good that grew from bad times. With Studio April Showers, I aim to take the joy I experience through my work and share it with others.
                         
-                        I make all of my pieces to be unique and long-lasting, and many are one-of-a-kind. They come in a wide range of styles, shapes, and sizes, and I hope that there will be a piece that is perfect for you and will bring you happiness. If you have any questions or want to make a special inquiry, please contact me via Etsy (StudioAprilShowers), Instagram (studio.aprilshowers), or email(studio.aprilshowers2021@gmail.com). Did you know, Studio April Showers hasn't always been named Studio April Showers? Scroll down to check out a timeline of many Studio April Showers events.</p>
+                        I make all of my pieces to be unique and long-lasting, and many are one-of-a-kind. They come in a wide range of styles, shapes, and sizes, and I hope that there will be a piece that is perfect for you and will bring you happiness. If you have any questions or want to make a special inquiry, please contact me via Etsy (StudioAprilShowers), Instagram (studio.aprilshowers), or email(studio.aprilshowers2021@gmail.com).
+                    </p>
+                    <h6>Did you know, Studio April Showers hasn't always been named Studio April Showers? Scroll down to check out a timeline of many Studio April Showers events.</h6>
                   </div>
                   <div class="col-md-4">
                     <div class="team-member">
@@ -106,7 +102,7 @@
                                 <h4>2020</h4>
                                 <h4 class="subheading">April - Pandemic and Polymer Clay</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">At the beginning of the pandemic, I had a lot of extra free time. During this time, I decided to play with some old clay I had from a kit from elementary school. I was inspired by the many amazing artists I followed on Instagram. I started by making little cakes and following tutorials I found on Youtube and Instagram.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -116,7 +112,7 @@
                                 <h4>2020</h4>
                                 <h4 class="subheading">August - Broken Lightbulb Clay Crafts is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Etsy startLorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">After months of making earrings, I finally decided to start an Etsy. I created my business under the name Broken Lightbulb Crafts becuase I couldn't think of any ideas, hence a "broken" lightbulb. I learned how to manage my Etsy shop and the ins and outs of online shopping and shipping.</p></div>
                         </div>
                     </li>
                     <li>
@@ -126,7 +122,7 @@
                                 <h4>2021</h4>
                                 <h4 class="subheading">Feb - Transition to Studio April Showers</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Rebranding Finding my StyleLorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">As I continued to run my business and create new desgins, I began to find my style and decided to rebrand. I designed my own logo, business card, and earring backing card.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
