--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -295,7 +295,7 @@
                         <h2 class="text-uppercase">Swimming Pools</h2>
                         <p class="item-intro text-muted">Summer Special</p>
                         <div class="row align-items-center"> 
-                            <div class="col-lg-5">
+                            <div class="col-lg-7">
                                 <div class="modal-body">
                                     <!-- Project details-->
                         
@@ -303,7 +303,7 @@
 
                                 </div>
                             </div>
-                            <div class="col-lg-7">
+                            <div class="col-lg-4">
                                 <p>These are my favorite summer earrings that I started making the summer of 2021. Each year these come back with new iterations, different pool shapes, new swimmers and more. These limited addtion earrings are some of my favorite but also most time consuming earrings to make. The "water" effect is achieved through a mix of translucent and opaque clay. Then each little swimmer is individually handmade with tiny bits of polymer clay. To finish everything off and give it its shinny appearance, I add a coat of glossy UV resin. What new swimming pools should I introduce this summer?</p>
                             </div>
                         </div>
@@ -343,7 +343,7 @@
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="/assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <h2 class="text-uppercase">Joshua Trees</h2>
+                        <h2 class="text-uppercase">Joshua Tree Inspired Earrings</h2>
                         <p class="item-intro text-muted">Jan 2022</p>
                         <div class="row"> 
                             <div class="col-lg-7">
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <p>I am inspired by everything around me, especially the natural beauty in California. I love California poppies and </p>
+                                <p>I am inspired by everything around me, especially the natural beauty of California. Some of my favorite earrings to create are California poppy inspired earrings. These earrings were inspired by my trip to Southern California and the unique Joshua Trees. </p>
                             </div>
                         </div>
                     </div>
@@ -368,8 +368,8 @@
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="/assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <h2 class="text-uppercase">Project Name</h2>
-                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                        <h2 class="text-uppercase">Breakfast Beads</h2>
+                        <p class="item-intro text-muted">July 2022</p>
                         <div class="row"> 
                             <div class="col-lg-7">
                                 <div class="modal-body">
@@ -380,7 +380,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>My other big source of insipration is food! I make many earrings inspired by my favorite foods and snacks. I've made earrings inspired by burgers, fries, ice cream, cookies and more! This collection of earrings were inspired by some classic breakfast foods. I loved experimenting with different waffle flavors. Which waffle flavor is your favorite?</p>
                             </div>
                         </div>
                     </div>
@@ -393,8 +393,8 @@
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="/assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <h2 class="text-uppercase">Project Name</h2>
-                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                        <h2 class="text-uppercase">Acrylic Space Kitties</h2>
+                        <p class="item-intro text-muted">May 2022</p>
                         <div class="row"> 
                             <div class="col-lg-7">
                                 <div class="modal-body">
@@ -405,7 +405,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>While I use polymer clay as my main material in most of my earrings, I also experiment with different mediums such as beads, resin, wire, and more. These earrings are made out of iridescent acrylic. My friend helped me desgin the image, I drew it on illustrator, and then with the help of my teacher, I used my school's laser cutter to etch and cut these earrings. </p>
                             </div>
                         </div>
                     </div>
@@ -418,8 +418,8 @@
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="/assets/img/close-icon.svg" alt="Close modal" /></div>
                     <div class="container">
-                        <h2 class="text-uppercase">Project Name</h2>
-                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                        <h2 class="text-uppercase">Funky Food Hoops</h2>
+                        <p class="item-intro text-muted">April 2021</p>
                         <div class="row"> 
                             <div class="col-lg-7">
                                 <div class="modal-body">
