--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <i class="fa-solid fa-shop fa-stack-1x fa-inverse"></i>     
                         </span>
                         <h4 class="my-3">Online and In-Person</h4>
-                        <p class="text-muted">If online shopping is your thing you can find my earrings on Etsy. If not, you can also find my earrings in person at Golden Hour (Albany, CA). </p>
+                        <p class="text-muted">If online shopping is your thing, you can find my earrings on Etsy. If not, you can also find my earrings in person at Golden Hour (Albany, CA). </p>
                     </div>
                 </div>
             </div>
