--- a/blogandreviews/index.html
+++ b/blogandreviews/index.html
@@ -32,6 +32,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/ourstory">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/faq">FAQs</a></li>
                         <li class="nav-item"><a class="nav-link" href="/portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://www.etsy.com/shop/StudioAprilShowers">Shop</a></li>
