--- a/ourstory/index.html
+++ b/ourstory/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Studio April Showers</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/assets/img/SAS logo.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -33,6 +33,7 @@
                         
                         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/blogandreviews">Reviews + Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/faq">FAQs</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="/portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://www.etsy.com/shop/StudioAprilShowers">Shop</a></li>
@@ -132,7 +133,7 @@
                                 <h4>2021</h4>
                                 <h4 class="subheading">November - Winter Craft Fair</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">After over a year of online sales, I was finally able to sell in person. I planned for this event for months and it was one of my best experiences in my business ever. It was very different than selling online and I loved being able to interact with my customers in-person.</p></div>
                         </div>
                     </li>
                     <li>
@@ -142,7 +143,7 @@
                                 <h4>2022</h4>
                                 <h4 class="subheading">Summer of Markets and Popups</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Over the summer, I atended many markets and popups in local communitites. I had popups at Golden Hour and markets in Albany, Walnut Park, and more!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -152,7 +153,7 @@
                                 <h4>2022</h4>
                                 <h4 class="subheading">Studio April Showers Found in In-person Stores</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Now not only can you find Studio April Shower earrings online and at in-person markets, they are also available at local stores! You can find Studio April Showers at 1250 Solano Ave, Albany, CA 94706 (Golden Hour) and 2505 Telegraph Ave, Berkeley, CA 94704 (SoSo Supermarket).</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
